Fixed images, spacing, and alt for tab1

--- a/tab1.css
+++ b/tab1.css
@@ -13,8 +13,8 @@ h2{
 .Section-1-With-Image-Container {
 	display: flex;
 	justify-content: center;
-	align-items: center;
-	gap: 50px;
+	align-items: stretch;
+	gap: 65px;
 	flex-wrap: wrap;
 	margin-bottom: 90px;
 }
@@ -26,18 +26,22 @@ h2{
 	color: whitesmoke;
 	font-size: 18px;
 	max-width: 525px;
-	height: 150px;
 	padding: 20px 40px;
+	justify-content: left;
 }
 
-.Image-1-Container {
-	width: 317px;
-	min-width: 317px;
+.Image-1-Container-UG {
+	justify-content: right;
+	flex: 1;
+	max-height: 160px;
+	min-width: 289px;
+	max-width: 289px;
 }
 
-.Image-1-Container img {
-	width: 100%;
-	height: 100%;
+.Image-1-Container-UG img {
+	max-height: 160px;
+	min-width: 289px;
+	max-width: 289px;
 	object-fit: cover;
 	border-radius: 10px;
 	border: 3px solid black;
@@ -48,7 +52,7 @@ h2{
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	gap: 50px;
+	gap: 87px;
 	flex-wrap: wrap;
 	margin-bottom: 90px;
 }
@@ -64,8 +68,9 @@ h2{
 }
 
 .Image-2-Container {
-	width: 317px;
-	min-width: 317px;
+	max-height: 202px;
+	width: 268px;
+	min-width: 268px;
 }
 
 .Image-2-Container img {
@@ -74,6 +79,30 @@ h2{
 	object-fit: cover;
 	border: 3px solid black;
 	border-radius: 10px;
+	box-shadow: 0 0 6px black;
+}
+
+.Section-3-With-Image-Container {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	gap: 69px;
+	flex-wrap: wrap;
+	margin-bottom: 90px;
+}
+
+.Image-3-Container {
+	max-height: 160px;
+	width: 285px;
+	max-width: 285px;
+}
+
+.Image-3-Container img {
+	height: 100%;
+	width: 100%;
+	object-fit: cover;
+	border-radius: 10px;
+	border: 3px solid black;
 	box-shadow: 0 0 6px black;
 }
 
@@ -88,7 +117,32 @@ h2{
 	padding-left: 30px;
 	padding-right: 30px;
 	margin: auto;
-	max-width: 1000px;
+	min-width: 911px;
+	max-width: 911px;
+}
+
+.Section-4-With-Image-Container {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	gap: 110px;
+	flex-wrap: wrap;
+	margin-bottom: 90px;
+}
+
+.Image-4-Container {
+	max-height: 244px;
+	width: 244px;
+	max-width: 244px;
+}
+
+.Image-4-Container img {
+	height: 100%;
+	width: 100%;
+	object-fit: cover;
+	border-radius: 10px;
+	border: 3px solid black;
+	box-shadow: 0 0 6px black;
 }
 
 ol {
