--- a/tab2.css
+++ b/tab2.css
@@ -26,7 +26,6 @@ h2{
 	color: whitesmoke;
 	font-size: 18px;
 	max-width: 525px;
-	height: auto;
 	padding: 20px 40px;
 	min-width:150px;
 	justify-content: left;
@@ -72,7 +71,6 @@ h2{
 	color: whitesmoke;
 	font-size: 18px;
 	max-width: 525px;
-	height: auto;
 	padding: 20px 40px;
 	min-width:150px;
 	justify-content: left;
@@ -110,7 +108,6 @@ h2{
 	color: whitesmoke;
 	font-size: 18px;
 	width: 576px;
-	height: auto;
 	padding: 20px 40px;
 	min-width: 500px;
 }
@@ -147,7 +144,6 @@ h2{
 	color: whitesmoke;
 	font-size: 18px;
 	width: 576px;
-	height: auto;
 	padding: 20px 40px;
 	min-width: 500px;
 }
